Compiler/tests/bad/set3.nx
type t = [20 .. 10];
